# viberoute

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.base.json
docs/: PROMPTS.md
server/: README.md  pyproject.toml
server/.railtracks/data/sessions/: VibeRoute Planner Flow_0b30b198-366f-4fe9-aae7-8eb3119553b9.json  VibeRoute Planner Flow_112a3895-5e8f-48de-b976-bb4faa60c098.json  VibeRoute Planner Flow_1b7b642b-73e5-4f15-b62b-bf192bcfd975.json  VibeRoute Planner Flow_235d4762-a008-4ef6-9c6c-58dc3cf1913b.json  VibeRoute Planner Flow_2968d3a7-d191-4f1c-91a5-96f3b9dadd36.json  VibeRoute Planner Flow_483ccb10-61b5-4a47-9663-3a8e333c9165.json  VibeRoute Planner Flow_595c4b80-b950-43a9-acd3-94db0eb41c4e.json  VibeRoute Planner Flow_5e117d6b-8f23-4f26-b648-cb4aad7b740f.json  VibeRoute Planner Flow_640a0fe5-8d89-4b8f-a551-af7c1923da81.json  VibeRoute Planner Flow_6847e0ef-4a1b-4166-9d4d-bd3c25a6f3d3.json  VibeRoute Planner Flow_874f4407-e988-43c5-aa89-e9081a20dc67.json  VibeRoute Planner Flow_91bdf999-4d94-44e1-bfb3-2b05111f51b1.json  VibeRoute Planner Flow_95bc03c7-7ac2-4edd-931c-fb8f9417cecc.json  VibeRoute Planner Flow_9857b47b-54b0-4c6d-8d22-edfa81f3db1b.json  (+21 more)
server/app/: env.py  main.py  models.py
server/app/agents/: __init__.py  coordinator.py  shared.py
server/app/planning/: __init__.py  flow.py  heuristics.py  models.py
server/app/services/: geocoding.py  image_interpreter.py  intake_parser.py  map_highlights.py  navigation_commentary.py  place_grounder.py  plan_validator.py  planner_chat.py  route_planner.py  weather.py
(+39 files in other folders)
