[project]
name = "viberoute-server"
version = "0.1.0"
description = "FastAPI scaffold for the VibeRoute MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "google-genai>=1.30.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "railtracks>=1.3.5,<2.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[tool.uv]
package = false
